--- a/rebar.config
+++ b/rebar.config
@@ -2,5 +2,5 @@
 {erl_opts, [debug_info]}.
 {dialyzer, [{plt_extra_apps, []},
             {warnings, [unknown]}]}.
-{shell, [{apps, [jose]}]}.
+{shell, [{apps, [pkcs]}]}.
 {deps, []}.
