Use erl-hex as test dependency

--- a/rebar.config
+++ b/rebar.config
@@ -3,3 +3,8 @@
 {dialyzer, [{plt_extra_apps, []},
             {warnings, [unknown]}]}.
 {deps, []}.
+{profiles, [{test,
+             [{deps,
+               [{hex,
+                 {git, "https://github.com/exograd/erl-hex.git",
+                  {tag, "v0.2.0"}}}]}]}]}.
